@@ -392,22 +392,21 @@ public final class ProcessTools {
       When test is executed with process wrapper the line is changed from
       java <jvm-args> <test-class> <test-args>
       to
-      java --enable-preview <jvm-args> jdk.test.lib.process.ProcessTools <wrapper-name> <test-class> <test-args>
+      java <jvm-args> -Dmain.wrapper=<wrapper-name> jdk.test.lib.process.ProcessTools <wrapper-name> <test-class> <test-args>
      */
-    private static List<String> addMainWrapperArgs(String mainWrapper, List<String> command) {
 
-        boolean useModules = command.contains("-m");
-        if (useModules) {
-            return command;
-        }
+        private static List<String> addMainWrapperArgs(String mainWrapper, List<String> command) {
+
+        final List<String> unsupportedArgs = List.of(
+             "-jar", "-cp", "-classpath", "--class-path", "--describe-module", "-d",
+             "--dry-run", "--list-modules","--validate-modules", "-version");
+
+        final List<String> doubleWordArgs = List.of(
+             "-jar", "-cp", "-classpath", "--class-path", "--add-opens", "--upgrade-module-path",
+             "--describe-module", "--add-modules", "-d", "--add-exports", "--limit-modules",
+             "--add-reads", "--patch-module", "--module-path", "--module", "-m", "-p");
 
         ArrayList<String> args = new ArrayList<>();
-        final String[] doubleWordArgs = {"-cp", "-classpath", "--add-opens", "--class-path", "--upgrade-module-path",
-                "--add-modules", "-d", "--add-exports", "--patch-module", "--module-path"};
-
-        if (mainWrapper.equalsIgnoreCase("virtual")) {
-            args.add("--enable-preview");
-        }
 
         boolean expectSecondArg = false;
         boolean isWrapperClassAdded = false;
@@ -422,20 +421,30 @@ public final class ProcessTools {
                 args.add(cmd);
                 continue;
             }
-            for (String dWArg : doubleWordArgs) {
-                if (cmd.equals(dWArg)) {
-                    expectSecondArg = true;
-                    args.add(cmd);
-                    break;
-                }
+            if (unsupportedArgs.contains(cmd)) {
+                return command;
+            }
+            if (doubleWordArgs.contains(cmd)) {
+                expectSecondArg = true;
+                args.add(cmd);
+                continue;
             }
             if (expectSecondArg) {
                 continue;
             }
-            if (cmd.startsWith("-")) {
+            // command-line or name command-line file
+            if (cmd.startsWith("-") || cmd.startsWith("@")) {
                 args.add(cmd);
                 continue;
             }
+
+            // if command is like 'java source.java' then return
+            if (cmd.endsWith(".java")) {
+                return command;
+            }
+            // Some tests might check property to understand
+            // if virtual threads are tested
+            args.add("-Dmain.wrapper=" + mainWrapper);
             args.add("jdk.test.lib.process.ProcessTools");
             args.add(mainWrapper);
             isWrapperClassAdded = true;
@@ -895,10 +904,10 @@ public final class ProcessTools {
                         tg.uncaughtThrowable = error;
                     }
                 });
-            if (tg.uncaughtThrowable != null) {
-                throw new RuntimeException(tg.uncaughtThrowable);
-            }
             vthread.join();
+            if (tg.uncaughtThrowable != null) {
+                throw tg.uncaughtThrowable;
+            }
         } else if (wrapper.equals("Kernel")) {
             MainThreadGroup tg = new MainThreadGroup();
             Thread t = new Thread(tg, () -> {
@@ -913,7 +922,7 @@ public final class ProcessTools {
             t.start();
             t.join();
             if (tg.uncaughtThrowable != null) {
-                throw new RuntimeException(tg.uncaughtThrowable);
+                throw tg.uncaughtThrowable;
             }
         } else {
             mainMethod.invoke(null, new Object[] { classArgs });
